Improved stability, added prefix
- added prefix
- fixed database saving
- removed ugly logging